fix: fix search bar display on small screens.

--- a/src/pages/perfumes/perfumes-grid-header/perfumes-grid-header.scss
+++ b/src/pages/perfumes/perfumes-grid-header/perfumes-grid-header.scss
@@ -41,4 +41,8 @@
   .header-buttons-box {
     flex-direction: row;
   }
+
+  .search-filter-wrapper {
+    min-width: 0;
+  }
 }
